feat(wga): wga with knowledge base as skills implement
