# docs/callback/swagger.yaml
@@ -2058,6 +2058,18 @@ definitions:
         description: 语义权重
         type: number
     type: object
+  request.WgaRagSearchKnowledgeBaseReq:
+    properties:
+      knowledgeIdList:
+        items:
+          type: string
+        type: array
+      question:
+        type: string
+    required:
+    - knowledgeIdList
+    - question
+    type: object
   request.WgaSandboxCleanupReq:
     properties:
       runId:
@@ -3174,6 +3186,33 @@ paths:
           schema:
             $ref: '#/definitions/response.Response'
       summary: 查询问答列表（命中测试）
+      tags:
+      - callback
+  /wga/rag/search-knowledge-base:
+    post:
+      consumes:
+      - application/json
+      description: WGA专用知识库检索接口
+      parameters:
+      - description: 用户ID
+        in: header
+        name: X-uid
+        required: true
+        type: string
+      - description: WGA知识库检索请求参数
+        in: body
+        name: data
+        required: true
+        schema:
+          $ref: '#/definitions/request.WgaRagSearchKnowledgeBaseReq'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/response.Response'
+      summary: WGA知识库检索
       tags:
       - callback
   /workflow/list:
